# steno

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  install.ps1  install.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
spikes/pty-claude/: Cargo.toml  RESULTS.md
spikes/pty-claude/src/: main.rs
spikes/stt-bench/: .gitignore  Cargo.toml  RESULTS.md
spikes/stt-bench/src/: main.rs
src/: app.rs  audio.rs  brain.rs  calendar.rs  claude_pane.rs  doctor.rs  loopback.rs  main.rs  notes.rs  session.rs  stt.rs  summary.rs  transcript.rs  ui.rs
