[package]
name = "mentor"
version = "0.1.0"
edition = "2024"
description = "Bot-free live meeting transcription TUI — local streaming STT, two-channel Me/Them capture, rolling AI summary, embedded Claude Code pane"
license = "MIT"
repository = "https://github.com/banavasi/voice-mentor"

# spikes/ are standalone crates; keep this a single-package workspace
[workspace]

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
cpal = "0.18.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.32"
portable-pty = "0.9"
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
rtrb = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sherpa-onnx = "=1.13.3"
sherpa-onnx-sys = "=1.13.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tui-term = "0.3.4"
uuid = { version = "1.23.4", features = ["v4"] }
vt100 = "0.16"
